# claude-code-recipes

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
recipes/conversation-memory/: README.md  recipe.py
recipes/encrypted-stores/: README.md  recipe.py
recipes/mcp-servers/: README.md  recipe.py
recipes/parallel-tasks/: README.md  recipe.py
recipes/rate-limit-fallback/: README.md  recipe.py
recipes/scheduled-agents/: README.md  recipe.py
recipes/session-management/: README.md  recipe.py
recipes/signal-integration/: README.md  recipe.py
tests/: test_imports.py
