[project]
name = "claude-code-recipes"
version = "0.1.0"
description = "Tested, production-ready patterns for building with Claude Code SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "RedBeret"}]
dependencies = [
    "claude-code-sdk>=0.0.25",
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recipes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
